--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/PaymentRequest
+server.port=8081
+localhost:27017/BHOneBankDB?authSource=admin
+spring.data.mongodb.uri=mongodb://root:password@localhost:27017/PaymentRequest
+# H2 database configuration
+spring.datasource.url=jdbc:h2:mem:batchdb;DB_CLOSE_DELAY=-1
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.sql.init.mode=always
+
+# Spring Batch configuration
+spring.batch.jdbc.initialize-schema=always
+spring.h2.console.enabled=true
+
+output.file.path=test.txt
