--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.batch.jdbc.initialize-schema=always
 spring.h2.console.enabled=true
 
 output.file.path=test.txt
+
+logging.level.org.springframework.batch=DEBUG
+logging.level.org.springframework.batch.core=DEBUG
