--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,24 @@
 server.port=8081
-localhost:27017/BHOneBankDB?authSource=admin
-spring.data.mongodb.uri=mongodb://root:password@localhost:27017/PaymentRequest
+spring.data.mongodb.uri=mongodb://root:password@localhost:27017/BHOneBank?authSource=admin
+
 # H2 database configuration
-spring.datasource.url=jdbc:h2:mem:batchdb;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:batchdb;DB_CLOSE_DELAY=-1;MODE=MYSQL
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-spring.sql.init.mode=always
 
 # Spring Batch configuration
 spring.batch.jdbc.initialize-schema=always
+spring.batch.job.enabled=false
 spring.h2.console.enabled=true
 
 output.file.path=test.txt
 
+logging.level.org.springframework.batch.core=INFO
 logging.level.org.springframework.batch=DEBUG
-logging.level.org.springframework.batch.core=DEBUG
+
+#logging.level.org.springframework.batch.item.xml=DEBUG
+#logging.level.org.springframework.oxm=DEBUG
+#
+#logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+#logging.level.org.springframework.batch.core.repository.support.SimpleJobRepository=DEBUG
